--- a/frontend/src/app/component/chat/chat.component.html
+++ b/frontend/src/app/component/chat/chat.component.html
@@ -1,7 +1,7 @@
 <div>
   <div id="conversation">
     <input type="text" id="text" placeholder="Write a message..."/>
-    <button id="sendMessage" onclick="sendMessage();">Send</button>
+    <button id="sendMessage" (click)="send();">Send</button>
     <p id="response"></p>
   </div>
 </div>
