Conversation uses table

--- a/frontend/src/app/component/chat/chat.component.html
+++ b/frontend/src/app/component/chat/chat.component.html
@@ -2,6 +2,12 @@
   <div id="conversation">
     <input type="text" id="text" placeholder="Write a message..."/>
     <button id="sendMessage" (click)="send();">Send</button>
-    <p id="response"></p>
+    <table id="conversation">
+      <tbody>
+        <tr *ngFor="let item of conversation">
+          <td>{{ item.message }}</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
